# passwordless

./: Cargo.toml  Dockerfile  README.md  Rocket.toml
.github/workflows/: rust.yaml
src/: main.rs  models.rs  tests.rs  utils.rs
src/static/: client-register.js
templates/: index.html.tera
